# magic-mirror

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Ray.hpp  Solution.h  Sphere.hpp  Triangle.hpp  Wavefront.hpp  maths.hpp  parsing.hpp
lib/: CMakeLists.txt  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  Ray.hpp  Scene.cpp  Scene.h  Solution.cpp  Solution.h  Sphere.cpp  Sphere.hpp  Texture.cpp  Texture.hpp  Tree.cpp  Tree.h  Triangle.cpp  Triangle.hpp  View.cpp  View.hpp  color_math.cpp  color_math.hpp  file.cpp  file.hpp  maths.cpp  maths.hpp
lib/obj_file_handling/: CMakeLists.txt  Wavefront.cpp  parsing.cpp  parsing.h
lib/png/: png_encoder.cpp  png_encoder.hpp
lib/vec/: Vec.hpp  vec_test.cpp
objects/: cube.mtl
tests/: CMakeLists.txt  material_file_parsing.cpp  object_file_parsing.cpp  reflection_1.txt  reflection_2.txt  refraction_1.txt  refraction_2.txt  refraction_3.txt
util/: minecraft.py  sphere_gen.py
